--- a/assets/ignite.cfg
+++ b/assets/ignite.cfg
@@ -5,7 +5,7 @@ quiet: false
 
 # Entrada padrão
 /Redstone OS
-    protocol: limine
+    protocol: redstone
     kernel_path: boot():/boot/kernel
     cmdline: verbose
     module_path: boot():/boot/initfs
