--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "anvil"
@@ -10,7 +10,6 @@ readme = "README.md"
 license = "MIT"
 requires-python = ">=3.11"
 authors = [{ name = "RedstoneOS Team" }]
-keywords = ["os", "kernel", "build-system", "diagnostic"]
 
 dependencies = [
     "rich>=13.0",
@@ -21,18 +20,12 @@ dependencies = [
     "pydantic>=2.0",
 ]
 
-[project.optional-dependencies]
-dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]
-
 [project.scripts]
 anvil = "anvil.cli:app"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/anvil"]
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
-
-[tool.ruff.lint]
-select = ["E", "F", "W", "I", "N", "UP"]
