--- a/anvil.toml
+++ b/anvil.toml
@@ -29,8 +29,8 @@ path = "firefly/compositor"
 target = "x86_64-unknown-none"
 
 [[components.services]]
-name = "console"
-path = "services/console"
+name = "shell"
+path = "firefly/shell"
 target = "x86_64-unknown-none"
 
 # ============================================================================
